# NCraft

./: .gitattributes  .gitignore  :w  CMakeLists.txt  NCraft.code-workspace  README.md  runcmake.sh  temp_code.txt
glad/include/glad/: glad.h
glad/src/: glad.c
glfw/: cmake_uninstall.cmake
src/: Buffer.cpp  Camera.cpp  Chunk.cpp  NCraftMain.cpp  NCraftMain.h  NCraftWindow.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  main.cpp
src/World/: Block.cpp
src/graphics/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Cube.h  MasterRenderer.cpp  MasterRenderer.h  NCraftWindow.cpp  NCraftWindow.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  WorldRenderer.cpp  WorldRenderer.h
src/graphics/ui/: Item.cpp  Item.h  UIRenderer.cpp  UIRenderer.h
src/inc/: Block.h  Buffer.h  Camera.h  NCraftMain.h  NCraftWindow.h  Renderer.h  Shader.h  Texture.h
src/inc/math/: Vec3f.h
src/inc/utils/: std_image.h
src/inc/utils/FastNoise/: FastNoise.cpp  FastNoise.h
src/math/: Vec3f.cpp
src/player/: Player.cpp  Player.h
src/world/: Block.h  Chunk.cpp  Chunk.h  ChunkLoader.cpp  ChunkLoader.h  TerrainGenerator.cpp  TerrainGenerator.h  World.cpp  World.h
